# PROJECT01

./: .mxproject  Makefile  Test-Gate01.ioc  build_and_flash.bat  test_uart.py
CMakeFile/: CommonPath.cmake  Flag.cmake
Examples/Gateway/: CMakeLists.txt  Config.h
Examples/Node01/: CMakeLists.txt  Config.h
Examples/Node02/: CMakeLists.txt  Config.h  HeatConfig.h
Examples/Test_Node/: CMakeLists.txt  HeatConfig.h
G-TestFile/: CMakeLists.txt  UnitTest-Gtest.cpp
HEAT_Routing/Inc/: MessageParser.hpp  peripheral.hpp  task_handler.hpp
HEAT_Routing/Inc/FunctionHeader/: protocolNaming.hpp
HEAT_Routing/Src/: Calculate_Function.cpp  Message_Task_Handler.cpp  TimerCallback.cpp  peripheral.cpp  task_test_handler.cpp
Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
LoRa_AS32_Lib/Inc/: LoRa_AS32_lib.h
LoRa_AS32_Lib/Src/: LoRa_AS32_lib.c
PROJECT01/Inc/: MessageParser.hpp  task_handler.hpp
PROJECT01/Inc/FunctionHeader/: Calculate_Function.hpp  MessageReadWrite.hpp  protocolNaming.hpp
PROJECT01/Src/: MessageParser.cpp  MessageReadWrite.cpp  Message_Task_Handler.cpp  TimerCallback.cpp  task_handler.cpp  task_test_handler.cpp
ReadMe/: task_setup_communication.md  task_update_and_send_or_rec.md
Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
